# cfd-ops

./: CITATION.cff  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: index.md  installation.md
docs/api/: index.md
src/cfd_ops/: __init__.py  cli.py
src/cfd_ops/operations/: __init__.py  common.py  cut.py  extend.py  merge.py  rotate.py  translate.py  transpose.py
tests/: test_cli.py  test_import.py  test_ops.py
