[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cfd-ops"
dynamic = ["version"]
description = "Operations for transforming, extracting, remapping, and combining CFD datasets built on the cfd-io data model"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.11"
authors = [
    {name = "Christoph Hader", email = "chader@arizona.edu"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["cfd", "operations", "transform", "extract", "remap", "dataset"]

dependencies = [
    "numpy>=1.24.0",
    "cfd-io>=0.2.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
docs = [
    "mkdocs>=1.5,<2",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/uahypersonics/cfd-ops"
Repository = "https://github.com/uahypersonics/cfd-ops"

[project.scripts]
cfd-ops = "cfd_ops.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

# --------------------------------------------------
# coverage
# --------------------------------------------------
[tool.coverage.run]
source = ["cfd_ops"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
